Initial commit: Flask Cybersecurity Dashboard

--- a/.env/.env
+++ b/.env/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=12345
-DB_USER=root
-DB_PASS=your_password
-DB_NAME=your_database
-DB_HOST=localhost
-DB_PORT=3306
+MYSQLHOST=mysql.railway.internal
+MYSQLPORT=3306
+MYSQLUSER=root
+MYSQLPASSWORD=rolTnuYcVnDtkVvPUEpAgCdClgWUfIgs
+MYSQLDATABASE=railway
