Initial commit: Flask Cybersecurity Dashboard

--- a/.env/.env
+++ b/.env/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=12345
-MYSQLHOST=mysql.railway.internal
+MYSQLHOST=${{RAILWAY_PRIVATE_DOMAIN}}
 MYSQLPORT=3306
 MYSQLUSER=root
-MYSQLPASSWORD=DpmCtsdMTQBvZHiFGXiudpOGOMwCyree
-MYSQLDATABASE=railway
+MYSQLPASSWORD=${{MYSQL_ROOT_PASSWORD}}
+MYSQLDATABASE=${{MYSQL_DATABASE}}
