Initial commit: Flask Cybersecurity Dashboard

--- a/.env/.env
+++ b/.env/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=12345
-MYSQLHOST=${{RAILWAY_PRIVATE_DOMAIN}}
-MYSQLPORT=3306
+MYSQLHOST="gondola.proxy.rlwy.net"
+MYSQLPORT=19617
 MYSQLUSER=root
-MYSQLPASSWORD=${{MYSQL_ROOT_PASSWORD}}
-MYSQLDATABASE=${{MYSQL_DATABASE}}
+MYSQLPASSWORD="zSZTEQIkTIvckSAbxaqiIMqphRyuUfzs"
+MYSQLDATABASE="railway"
