Initial commit: Flask Cybersecurity Dashboard

--- a/.env/.env
+++ b/.env/.env
@@ -1,6 +1,6 @@
 SECRET_KEY=12345
-MYSQLHOST="gondola.proxy.rlwy.net"
+MYSQLHOST=gondola.proxy.rlwy.net
 MYSQLPORT=19617
 MYSQLUSER=root
-MYSQLPASSWORD="zSZTEQIkTIvckSAbxaqiIMqphRyuUfzs"
-MYSQLDATABASE="railway"
+MYSQLPASSWORD=ZSZTEQIkTIvckSAbxaqiIMqphRyuUfzs
+MYSQLDATABASE=railway
