Add Procfile for Railway start command

--- a/.env/.env
+++ b/.env/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=12345
-MYSQLHOST=gondola.proxy.rlwy.net
+MYSQLHOST=mysql-xl07.railway.internal
 MYSQLUSER=root
 MYSQLPASSWORD=zSZTEQIkTIvckSAbxaqiIMqphRyuUfzs
 MYSQLDATABASE=railway
