--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,5 +1,5 @@
 [phases.setup]
-nixPkgs = ["wkhtmltopdf"]
+nixPkgs = ["python312", "python312Packages.pip", "wkhtmltopdf"]
 
 [phases.install]
 cmds = ["pip install -r requirements.txt"]
