Add Procfile for Railway start command

--- a/.env/.env
+++ b/.env/.env
@@ -1,5 +1,5 @@
-MYSQLHOST=mysql-xl07.railway.internal
-MYSQLPORT=3306
-MYSQLUSER=root
-MYSQLPASSWORD=zSZTEQIkTIvckSAbxaqiIMqphRyuUfzs
-MYSQLDATABASE=railway
+DB_HOST= sql12.freesqldatabase.com
+MYSQLPORT= 3306
+DB_USER= sql12787920
+DB_PASSWORD= wfcdEp3R45
+DB_NAME= sql12787920
